adds testing for admin views and projects api
